<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_light"
    tools:context=".AddNotesFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_note_view_style"
        android:elevation="60dp"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleEt"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_title"
                android:inputType="text|textMultiLine"
                android:maxLines="1"
                android:textSize="32sp"
                android:textStyle="bold"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/contentEt"
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textLongMessage"
                android:hint="@string/enter_description"
                android:textSize="22sp"
                android:textStyle="normal"
                android:autofillHints="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="end"
                android:layout_margin="12dp"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:text="@string/cancel"
                    android:textColor="@color/purple_500"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/okBtn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="12dp"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:text="@string/ok"
                    android:textColor="@color/purple_500"/>

            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>