<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/my_notes"
        app:titleTextColor="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:outlineAmbientShadowColor="@color/gray"
        android:outlineSpotShadowColor="@color/gray"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/add_notes_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Widget.Material3.CircularProgressIndicator"
        app:tint="@color/app_theme" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <app.rive.runtime.kotlin.RiveAnimationView
        android:id="@+id/loadingAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:riveResource="@raw/loading_book" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:backgroundTint="@color/app_theme"
        app:cardElevation="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <app.rive.runtime.kotlin.RiveAnimationView
                android:id="@+id/avatarAnimation"
                android:layout_width="94dp"
                android:layout_height="78dp"
                android:layout_marginStart="4dp"
                android:visibility="gone"
                android:layout_marginBottom="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riveResource="@raw/avatar_prototype" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold|italic"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/frameLayout2"
                app:layout_constraintStart_toEndOf="@+id/avatarAnimation"
                app:layout_constraintTop_toTopOf="parent" />


            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <app.rive.runtime.kotlin.RiveAnimationView
                    android:id="@+id/logOutAnimation"
                    android:layout_width="120dp"
                    android:layout_height="129dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="8dp"
                    app:riveResource="@raw/green_flames"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="9.5dp"
                    android:gravity="center"
                    android:text="@string/logout_btn"
                    android:textColor="@color/white"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/logOutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />


            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>